fix: Accordion when a section is wrapped within another element
Replace two-level for-loop with a querySelectorAll to select elements with [*-acc] ID.

Replace greater-than [>] characters with space characters to apply [w3e-tabs] and [w3e-accordion] styles to all child elements.

--- a/w3e.css
+++ b/w3e.css
@@ -1670,7 +1670,7 @@ h6 {
   border-color: #e7ffff!important;
 }
 
-.w3e-accordion>[id$=-acc],.w3e-slider>img,.w3e-tabs>[id$=-tab] {
+.w3e-accordion [id$=-acc],.w3e-slider>img,.w3e-tabs [id$=-tab] {
   display: none;
 }
 
